--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "underscore": "*",
     "cron": "*",
+    "time": "*",
     "rabbitmq-monitor": "*",
     "stackdriver-custom": "*"
   }
