adding another dep

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cron": "*",
     "time": "*",
     "rabbitmq-monitor": "*",
-    "stackdriver-custom": "*"
+    "stackdriver-custom": "*",
+    "request": "*"
   },
   "license": "MIT"
 }
