--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stackdriver-rabbitmq",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "A nodecron that checks on rabbitmq's status, and submits the stats to Stackdriver.",
   "author": "Segment.io <friends@segment.io>",
   "url": "https://github.com/segmentio/stackdriver-rabbitmq",
@@ -8,16 +8,16 @@
     "type": "git",
     "url": "https://github.com/segmentio/stackdriver-rabbitmq.git"
   },
-  "scripts": {
-    "start": "node index"
+  "bin": {
+    "stackdriver-rabbitmq": "./bin/stackdriver-rabbitmq"
   },
   "dependencies": {
-    "underscore": "*",
-    "cron": "*",
-    "time": "*",
-    "rabbitmq-monitor": "*",
-    "stackdriver-custom": "*",
-    "request": "*"
+    "rabbitmq-monitor": "0.0.5",
+    "stackdriver-custom": "~0.2.0",
+    "commander": "2.1.0",
+    "cron": "1.0.1",
+    "sum.js": "0.5.0",
+    "debug": "~0.7.4"
   },
   "license": "MIT"
 }
