--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "type": "git",
     "url": "https://github.com/segmentio/stackdriver-rabbitmq.git"
   },
-  "bin": {
-    "stackdriver-rabbitmq": "./bin/stackdriver-rabbitmq"
-  },
+  "bin": "./bin/stackdriver-rabbitmq.js",
   "dependencies": {
     "rabbitmq-monitor": "0.0.5",
     "stackdriver-custom": "~0.2.0",
